# ideas

./: .gitignore  .pdm-python  .pinact.yaml  .pre-commit-config.yaml  .prettierignore  .s3cfg  .terraform.lock.hcl  .tool-versions  .travis.yml  CLAUDE.md  Makefile  Procfile  README.md  fabfile.py  import-wordpress.py  justfile  mise.toml  netlify.toml  offbyone.wordpress.2015-06-01.xml  outputs.tf  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.in  requirements.txt  setup-s3-cmd  setup.tf  tasks.py  to-archive.py  update-travis.sh  versions.tf
.github/: dependabot.yml
.github/workflows/: cleanup-previews.yml  main.yml  pr-preview.yml  pr.yml
Just-Read/templates/: base.html  tag.html
assets/: favicon-16.pxm  favicon.pxm  offby1-commission-PSD.pxd
config/: captions.fmt  exif.fmt
content/extra/: robots.txt
content/morruz/: 164.md  30-hours-5-countries.md  81.md  85.md  89.md  a-last-hiroshima-post.md  a-slightly-different-robin-hood.md  aaaaaaaaaaaaaaaaaaaantarctica.md  about.md  adrift-on-the-central-plains-of-argentina.md  again-i-must-reiterate.md  all-the-small-things.md  alone-in-the-big-city.md  and-farewell-to-sur-america.md  and-here-we-are.md  and-now-provence.md  and-so-were-about-to-head-off.md  and-thats-a-wrap.md  and-the-award-for-gratuitous-nudity-goes-to.md  and-were-off.md  another-day-another-odyssey.md  are-you-sure-you-dont-want-to-use-my-glasses.md  arrival.md  bariloche.md  border-crossings-romantic-secrets-and-pleasant-reunions.md  buenos-aires.md  cairo-and-beyond.md  calvi-in-a-few-steps.md  cave-bars-rock.md  city-highlights-avignon.md  city-highlights-calvi.md  city-highlights-carcassonne.md  city-highlights-champagne.md  city-highlights-liminal-space.md  city-highlights-nice.md  city-highlights-paris.md  coda.md  conception.md  cruising.md  curantos-again.md  (+111 more)
content/pages/: adblockers.md  azureus-autocat-plugin.md  azureus-autocat-plugin.rst  azureus-autostop-plugin.md  azureus-autostop-plugin.rst  azureus-jabber-plugin.md  azureus-jabber-plugin.rst  azureus-plugin-tutorial.md  azureus-plugin-tutorial.rst  contact.md  cv.md  cv.rst  keys.html  librarything-blog-widget.md  librarything-blog-widget.rst  now.md  projects.md  projects.rst  tools.md
content/posts/: 2010s.md  2010s.rst  2020-06-16-direnv-and-pip-tools-together.md  2020-11-27 - Doom Emacs and direnv.md  2020-11-27 - Doom Emacs and direnv.rst  2021-05-07 - Ten Years.md  2021-05-07 - Ten Years.rst  2021-05-10-development-environment-2021.md  2021-05-10-development-environment-2021.rst  2021-09-10-snoqualmie-tunnel.md  2021-09-10-snoqualmie-tunnel.rst  2021-10-06-automating-letsencrypt-route53-using-aws-iot.md  2021-10-06-automating-letsencrypt-route53-using-aws-iot.rst  2022-07-29-grey-ships-pass.md  2022-07-29-grey-ships-pass.rst  2022-11-07-mastodon-hosting-part-1.md  2022-12-07-mastodon-hosting-part-2.md  2023-01-11-bits-prometheus-on-tailscale-and-fly-io.md  2023-02-20-an-external-web-proxy-for-my-tailnet.md  2023-02-20-an-external-web-proxy-for-my-tailnet.rst  2023-03-20-updating-your-nexus-enrollment-after-naturalizing-as-a-us-citizen.md  2023-06-09-putting-a-dockerized-service-on-your-tailnet.md  2023-06-13-how-to-remotely-update-the-host-certificates-on-a-udm.md  2023-06-13-how-to-remotely-update-the-host-certificates-on-a-udm.rst  2023-12-09-serve-an-s3-bucket-over-tailscale.md  2024-09-24-don-t-ship-your-envrc.rst  2024-10-02-uv-direnv-and-simple-envrc-files.md  2024-12-20-dad.md  2025-06-01-tailnet-hosts-as-ansible-facts.md  (+17 more)
plugins/: extract_linked_metadata.py  link_toot.py  social_cards.py
scripts/: logs
themes/: .dir-locals.el
(+1351 files in other folders)
