[project]
name = "offby1.website"
description = "My website"
requires-python = ">= 3.11"
keywords = [
  "pelican",
  "blog",
  "offby1"
]
version = "1.0.0"

dependencies = [
    "cssmin",
    "feed2toot",
    "invoke",
    "isort>=5.0",
    "markdown",
    "mf2py",
    "pelican-edit-url",
    "pelican-embed-microblog ~= 1.1",
    "pelican-gist",
    "pelican-githubprojects",
    "pelican-photos ~= 1.5",
    "pelican-simple-footnotes",
    "pelican-sitemap",
    "pelican-tag-cloud",
    "pelican-webassets",
    # ðŸ‘‡ðŸ» this is required by webassets' jsmin
    "jsmin~=3.0.1",
    "pelican~=4.5",
    "piexif",
    "python-slugify~=8.0",
    "rich",
    "webassets",
    "wheel",
    "ruff~=0.1.3",
    "rich~=13.8.1",
    "boto3~=1.35",
    "click~=8.1",
    "aws-log-parser~=2.4",
]

[[authors]]
name = "Chris Rose"
email = "offline@offby1.net"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pdm.dev-dependencies]
dev = [
    "boto3>=1.34.23",
    "click>=8.1.7",
    "aws-log-parser>=2.3.0",
]
