[project]
name = "offby1.website"
description = "My website"
requires-python = ">= 3.11"
keywords = [
  "pelican",
  "blog",
  "offby1"
]
version = "1.0.0"

dependencies = [
    "cssmin",
    "feed2toot",
    "invoke",
    "isort>=5.0",
    "markdown",
    "mf2py",
    "pelican-edit-url",
    "pelican-embed-microblog ~= 1.1",
    "pelican-gist",
    "pelican-githubprojects",
    "pelican-photos ~= 1.5",
    "pelican-simple-footnotes",
    "pelican-sitemap",
    "pelican-tag-cloud",
    "pelican-webassets~=2.0",
    # 👇🏻 this is required by webassets' jsmin
    "jsmin~=3.0.1",
    "pelican~=4.5",
    "piexif",
    "python-slugify~=8.0",
    "rich",
    "webassets",
    "wheel",
    "ruff~=0.6.8",
    "rich~=13.8",
    "boto3~=1.35",
    "click~=8.1",
    "aws-log-parser~=2.4",
]

[[authors]]
name = "Chris Rose"
email = "offline@offby1.net"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.uv.sources]
webassets = { git = "https://github.com/offbyone/webassets", branch = "ci-modernize" }
pelican-webassets = { git = "https://github.com/offbyone/pelican-plugin-webassets", branch = "up-webassets" }
