[project]
name = "offby1.website"
description = "My website"
requires-python = "~= 3.13"
keywords = [
  "pelican",
  "blog",
  "offby1"
]
version = "1.0.0"

dependencies = [
    "cssmin~=0.2.0",
    "feed2toot~=0.17",
    "invoke~=2.2.0",
    "isort>=5.0",
    "markdown~=3.7",
    "mf2py~=2.0.1",
    "pelican-edit-url~=0.1.1",
    "pelican-embed-microblog ~= 1.1",
    "pelican-gist~=0.3.4",
    "pelican-githubprojects~=0.1.1",
    "pelican-photos ~= 1.5",
    "pelican-simple-footnotes~=1.0.3",
    "pelican-sitemap~=1.2.0",
    "pelican-tag-cloud~=1.0.1",
    "pelican-webassets~=2.0",
    # 👇🏻 this is required by webassets' jsmin
    "jsmin~=3.0.1",
    "pelican~=4.5",
    "piexif~=1.1.3",
    "python-slugify~=8.0",
    "rich~=13.9.4",
    "webassets~=3.0.0a1",
    "wheel~=0.45.0",
    "ruff~=0.8.1",
    "boto3~=1.35",
    "click~=8.1",
    "aws-log-parser~=2.4",
]

[tool.uv]
override-dependencies = [
    "pillow~=11.0.0"
]


[[authors]]
name = "Chris Rose"
email = "offline@offby1.net"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.uv.sources]
webassets = { git = "https://github.com/offbyone/webassets", branch = "ci-modernize" }
pelican-webassets = { git = "https://github.com/offbyone/pelican-plugin-webassets", branch = "up-webassets" }
